scenarios/scenario1/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: backend
  name: backend-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: org/backend:release
          name: backend
          ports:
            - containerPort: 3000
          args:
            - "--backend-address"
            - "postgres-svc.default"
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
