scenarios/scenario1/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: frontend-dpl
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: org/frontend:latest
          name: frontend
          ports:
            - containerPort: 5000
          resources: 
            limits:
              cpu: 100m
              memory: 128Mi
